# comfyui_sunxAI_facetools_disabled_mediapipe

./: .tracking  CrossAttentionPatch.py  InstantID.py  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  resampler.py  utils.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish_node.yml
tests/: __init__.py  test_comfyui_sunxAI_facetools.py
